style:Added spacing variation and fix md / lg size

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,12 +4,15 @@
 @tailwind utilities; 
 
 .social-icon-p{
-    @apply ml-5 sm:text-sm md:text-4xl lg:text-5xl xl:text-5xl 2xl:text-6xl
+    @apply ml-5 sm:mt-1 sm:text-xl md:text-3xl md:ml-8 md:my-1 lg:text-4xl lg:ml-10 lg:my-2 xl:text-5xl xl:ml-14 2xl:text-6xl
 }
 
 .copyright-sizes{
-    @apply sm:text-sm md:text-xl lg:text-3xl xl:text-3xl 2xl:text-4xl text-2xl
+    @apply sm:text-base md:text-2xl lg:text-3xl xl:text-3xl 2xl:text-4xl
 }
 
+.footer-items-space{
+    @apply sm:p-5 md:p-10 lg:p-10 xl:p-10
+}
 
 
